		collections has been improved. In most situations the predicate will be called for each element in the
		collection.

	Code Changes:
		-[Core] Extension points added in the form of ContainerOptions.ConstructorXXXBehavior, which allows 
		 developers to override the behavior of constructor resolution and injection. (work item 18097)
		-[Extensions] RegisterDecorator extension methods now allow injecting Func<ServiceType> delegates. This
		 enables some interesting advanced scenarios where the creation of the decorated instance should be
		 delayed. (work item 18211)
		-[Extensions] RegisterSingeDecorator overloads added. These overloads are especially useful when
		 injecting Func<ServiceType> delegates into decorators.
		-[Extensions] When collections are registered using RegisterAll overloads that either take a list of
		 System.Type instances or a array of singletons (so not with RegisterAll<T>(IEnumerable<T>)), the
		 predicate supplied to RegisterDecorator will be called on each item in the collection, instead of
		 being called once for the complete collection. This allows individual items to be decorated while
		 skipping others.
		-[Extensions] The extension methods Register(this Container, Type service, Type implementation) and 
		 RegisterSingle(this Container, Type service, Type implementation) now allow supplying the same type
		 for service and implementation, which registers the type by itself.
		-[Extensions] RegisterDecorator and RegisterSingleDecorator extension methods now throw an expressive
		 NotSupportedException when a closed generic service type with open generic decorator type is supplied.
		 The container cannot handle this scenario, but the user can simply swap the generic type from the
		 service type to the decorator to get this to work.

	Bug fixes:
		-[Core] Container did not self-register when created with Container(ContainerOptions) ctor.
		 (work item 18139)